# Synergy

./: .gitignore  CMakeLists.txt  CMakePresets.json
SynergyClientLib/: CMakeLists.txt
SynergyClientLib/Includes/: Client.h  ClientDrawing.h  ClientGraph.h  ClientUI.h
SynergyClientLib/Includes/Public/: SynergyClientAPI.h  SynergyClientAPI_Drawing.h  SynergyClientAPI_Input.h  SynergyClientDrawing.h  SynergyClientInput.h
SynergyClientLib/Sources/: Drawing_INC.cpp  Graph_INC.cpp  Input_INC.cpp  SynergyClientMain.cpp  UI_INC.cpp
SynergyClientLib/Sources/Public/: SynergyClient.h  SynergyClientDrawBuffer.h
SynergyCoreLib/: CMakeLists.txt
SynergyCoreLib/Includes/Public/: SynergyCore.h  SynergyCoreMath.h  SynergyCoreMemory.h
SynergyCoreLib/Includes/Public/Graph/: SynergyGraph.h
SynergyCoreLib/Sources/: Memory_INC.cpp  SynergyCore.cpp  SynergyCore.h
SynergyServer/: CMakeLists.txt
SynergyServer/Sources/: SynergyServer.h  SynergyServerMain.cpp
